fix(search): prevent panel list icons to overlap results list

--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -27,6 +27,7 @@
 }
 
 .search-box {
+    z-index: 1;
     display: flex;
     flex-direction: column;
     position: relative;
